--- a/src/Components/KeyBoard/KeyBoard.css
+++ b/src/Components/KeyBoard/KeyBoard.css
@@ -7,7 +7,8 @@
   background-color: #030637;
 }
 
-button {
+.keyboard_container button {
+  /* padding: 30; */
   margin: 1px;
   height: 45px;
   width: 60px;
@@ -27,11 +28,11 @@ button {
   width: 83px;
 }
 
-.keyboard_container button.Back {
+.keyboard_container button.Backspace {
   width: 120px;
 }
 
-.keyboard_container button.Caps {
+.keyboard_container button.CapsLock {
   width: 100px;
 }
 
@@ -47,10 +48,15 @@ button {
   width: 80px;
 }
 
-.keyboard_container button.Ctrl {
+.keyboard_container button.Control {
   width: 95px;
 }
 
 .keyboard_container button.Space {
   width: 430px;
+}
+
+.keyboard_container button.active {
+  background-color: azure;
+  color: black;
 }
